# RuWa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  copilot-setup-steps.yml  e2e.yml  main.yml  release.yml
RuWa-bot/: Cargo.toml  README.md
RuWa-bot/examples/: advanced.rs
RuWa-bot/src/: commands.rs  config.rs  main.rs
docs/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
examples/: RECONNECTION.md  SESSION_BACKUP.md  benchmark.rs  ping_bot.rs  ping_example.md
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
src/: appstate_sync.rs  bot.rs  cache_config.rs  client.rs  download.rs  handshake.rs  history_sync.rs  http.rs  jid_utils.rs  keepalive.rs  lib.rs  lid_pn_cache.rs  main.rs  mediaconn.rs  message.rs  pair.rs  pair_code.rs  pdo.rs  prekeys.rs  receipt.rs  reconnect.rs  request.rs  retry.rs  send.rs  session.rs  session_backup.rs  spam_report.rs  sync_task.rs  transport.rs  unified_session.rs  upload.rs  usync.rs  version.rs
src/client/: context_impl.rs  device_registry.rs  lid_pn.rs  sender_keys.rs  sessions.rs
src/features/: blocking.rs  chat_actions.rs  chatstate.rs  contacts.rs  groups.rs  mex.rs  mod.rs  ping.rs  presence.rs  profile.rs  status.rs  tctoken.rs
src/handlers/: basic.rs  chatstate.rs  ib.rs  iq.rs  message.rs  notification.rs  presence.rs  receipt.rs  router.rs  traits.rs  unimplemented.rs
src/socket/: noise_socket.rs
src/store/: commands.rs  error.rs  mod.rs  persistence_manager.rs  signal.rs  signal_adapter.rs  signal_cache.rs  traits.rs
src/types/: enc_handler.rs  mod.rs
storages/sqlite-storage/: Cargo.toml
storages/sqlite-storage/src/: lib.rs  schema.rs  sqlite_store.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: app_state.rs  chat_actions.rs  chatstate_ttl.rs  connection.rs  groups.rs  media.rs  messaging.rs  offline_groups.rs  offline_messages.rs  offline_receipts.rs  prekey_sessions.rs  presence.rs  profile.rs  profile_picture.rs  receipts.rs
transports/tokio-transport/: Cargo.toml
transports/tokio-transport/src/: lib.rs
wacore/: Cargo.toml
wacore/appstate/: Cargo.toml
wacore/appstate/src/: decode.rs  encode.rs  hash.rs  lthash.rs  patch_decode.rs  processor.rs
wacore/benches/: reporting_token_benchmark.rs
wacore/binary/: Cargo.toml
wacore/binary/benches/: binary_benchmark.rs
wacore/binary/src/: decoder.rs  encoder.rs  jid.rs
wacore/derive/: Cargo.toml
wacore/derive/src/: lib.rs
wacore/libsignal/: Cargo.toml
wacore/libsignal/benches/: libsignal_benchmark.rs
wacore/libsignal/src/protocol/: protocol.rs  stores.rs  timestamp.rs
wacore/libsignal/src/store/: mod.rs  record_helpers.rs
wacore/noise/: Cargo.toml
wacore/noise/src/: edge_routing.rs  handshake.rs
wacore/src/: download.rs  history_sync.rs  ib.rs  lib.rs  messages.rs  pair.rs  pair_code.rs  prekeys.rs  proto_helpers.rs  protocol.rs  reporting_token.rs  request.rs  send.rs  usync.rs  xml.rs
wacore/src/client/: context.rs
wacore/src/handshake/: mod.rs
wacore/src/iq/: blocklist.rs  chatstate.rs  contacts.rs  dirty.rs  groups.rs  keepalive.rs  mediaconn.rs  mex.rs  mod.rs  node.rs  passive.rs  prekeys.rs  privacy.rs  profile.rs  props.rs  spam_report.rs  spec.rs  tctoken.rs  usync.rs
wacore/src/stanza/: business.rs  devices.rs  groups.rs  message.rs  mod.rs
wacore/src/store/: commands.rs  device.rs  traits.rs
wacore/src/types/: call.rs  events.rs  jid.rs  lid_pn.rs  message.rs  presence.rs  spam_report.rs  user.rs
wacore/tests/: appstate_external_mutations_test.rs  appstate_mac_test.rs  binary_protocol_test.rs  jid_test.rs  noise_handshake_test.rs
waproto/: Cargo.toml
