
[package]
name = "ruwa"
version = "1.0.0"
edition = "2024"
authors = ["Nathan <nathan@jrevanaldi-ai.github.io>"]
license = "MIT"
repository = "https://github.com/jrevanaldi-ai/ruwa"
readme = "README.md"
description = "Rust client for WhatsApp Web"

[workspace]
members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "tests/e2e",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
]
default-members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
]

[workspace.dependencies]
# Shared dependencies
aes = "0.8.3"
aes-gcm = { version = "0.10.2", default-features = false, features = ["aes", "alloc", "std"] }
anyhow = { version = "1.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.22", default-features = false }
bytes = { version = "1.5", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false }
ctr = { version = "0.9", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12.3", default-features = false }
hmac = { version = "0.12.1", default-features = false, features = ["reset"] }
iai-callgrind = "0.16"
log = "0.4"
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-build = { version = "0.14.1", default-features = false }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }

# Internal workspace crates
wacore-ng = { path = "./wacore", default-features = false, version = "1.0.0" }
wacore-appstate-ng = { path = "./wacore/appstate", default-features = false, version = "1.0.0" }
wacore-binary-ng = { path = "./wacore/binary", default-features = false, version = "1.0.0" }
wacore-derive-ng = { path = "./wacore/derive", version = "1.0.0" }
wacore-libsignal-ng = { path = "./wacore/libsignal", version = "1.0.0" }
wacore-noise-ng = { path = "./wacore/noise", version = "1.0.0" }
waproto-ng = { path = "./waproto", version = "1.0.0" }

[features]
debug-snapshots = []
danger-skip-tls-verify = ["ruwa-tokio-transport?/danger-skip-tls-verify"]
default = ["sqlite-storage", "tokio-transport", "ureq-client", "tokio-native"]
simd = ["wacore-ng/simd"]
ureq-client = ["dep:ruwa-ureq-http-client"]
tokio-transport = ["dep:ruwa-tokio-transport"]
signal = ["tokio/signal"]
sqlite-storage = ["ruwa-sqlite-storage"]
tokio-native = ["tokio/rt-multi-thread"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
dashmap = "6.1.0"
env_logger = { version = "0.11", default-features = false }
hex = { workspace = true }
log = { workspace = true }
moka = { version = "0.12.12", features = ["future"] }
prost = { workspace = true }
rand = { workspace = true }
scopeguard = "1.2"
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
wacore-ng = { workspace = true }
wacore-binary-ng = { workspace = true }
waproto-ng = { workspace = true }
ruwa-sqlite-storage = { path = "./storages/sqlite-storage", version = "1.0.0", optional = true }
ruwa-tokio-transport = { path = "./transports/tokio-transport", version = "1.0.0", optional = true }
ruwa-ureq-http-client = { path = "./http_clients/ureq-client", version = "1.0.0", optional = true }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[[example]]
name = "benchmark"
required-features = ["danger-skip-tls-verify"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# Benchmark profile: optimized but without aggressive LTO that breaks iai-callgrind
[profile.bench]
inherits = "release"
lto = "thin"
debug = 1
strip = false
