[package]
name = "ruwa-bot"
version = "1.0.0"
edition = "2021"
authors = ["Nathan <support@nathan.christmas>"]
description = "Example WhatsApp bot using RuWa library"
license = "MIT"

[dependencies]
# RuWa WhatsApp library
ruwa = { version = "1.0.0" }
ruwa-sqlite-storage = { version = "1.0.0" }
ruwa-tokio-transport = { version = "1.0.0" }
ruwa-ureq-http-client = { version = "1.0.0" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.9"
rand = "0.9"

# Waproto for WhatsApp message types
waproto-ng = { version = "1.0.0" }
wacore-ng = { version = "1.0.0" }
