[package]
name = "waproto-ng"
version = "1.0.0"
edition = "2024"
authors = ["Nathan <nathan@jrevanaldi-ai.github.io>"]
license = "MIT"
repository = "https://github.com/jrevanaldi-ai/ruwa"
description = "Protocol Buffers definitions for WhatsApp"

[dependencies]
prost = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
