[package]
name = "ruwa-tokio-transport"
version = "1.0.0"
edition = "2024"
authors = ["Nathan <nathan@jrevanaldi-ai.github.io>"]
license = "MIT"
repository = "https://github.com/jrevanaldi-ai/ruwa"
description = "Tokio-based WebSocket transport for RuWa"

[features]
default = []
# Skip TLS certificate verification (for testing with mock servers)
danger-skip-tls-verify = []

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "alloc",
    "std",
] }
http = "1.4.0"
log = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
tokio-websockets = { version = "0.13.2", features = [
    "client",
    "rustls-bring-your-own-connector",
    "rand",
    "ring",
] }
wacore-ng = { workspace = true }
webpki-roots = "1.0.4"
